--- a/pub/math.main.scss
+++ b/pub/math.main.scss
@@ -13,7 +13,7 @@ body {
   position: relative;
   width: 500px;
   height: 800px;
-  transition: transform 300ms ease-in-out;
+  transition: transform,opacity 300ms ease-in-out;
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
 }
@@ -94,5 +94,32 @@ body {
       font-size: 200px;
       color: #444;
     }
+  }
+}
+
+.score {
+  position: absolute;
+  width: 500px;
+  height: 800px;
+
+  >.text {
+    position: absolute;
+    color: #fff;
+    top: 0;
+    width: 500px;
+    line-height: 800px;
+    padding-top: 20px;
+    text-align: center;
+    font-size: 42px;
+    text-shadow: 1px 1px 0 #ccc;
+  }
+
+  >.heart {
+    font-size: 500px;
+    color: #444;
+    text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+    width: 500px;
+    text-align: center;
+    line-height: 800px;
   }
 }
